Make --simd the one orthogonal acceleration flag across backends (todo 100)
Untangle the SIMD/memory-model axes: which memory model you compile for
(.class / wasm-GC / --no-gc) and whether the vec: kernels use hardware SIMD
are now independent.

- --no-gc alone emits plain scalar linear-memory vec: loops (a v128-free MVP
  module that runs on a runtime WITHOUT the SIMD proposal); --no-gc --simd
  emits the v128 (f64x2/f32x4) kernels as before. Behavioral change: --no-gc
  no longer implies v128.
- wasm-GC + --simd warns and falls back to the scalar reference (v128 needs
  linear memory; wasm-GC packed arrays are GC objects -> follow-on todo 101).
  Interpreter + --simd warns (no-op). --simd is threaded into the --no-gc
  compiler and documented in --help.
- Rename ScalarWasmCompiler -> NoGcWasmCompiler: "scalar" is freed to mean
  non-SIMD, and "non-GC" names the value model (unboxed i64/f64/linear-memory
  pointers), which is orthogonal to hardware SIMD. Token updated across code,
  .kb, docs, CLAUDE.md and .todo.
- The v128 code paths are untouched (so --no-gc --simd output is byte-identical
  to the pre-change --no-gc output); the four vectorizable kernels early-return
  to a new scalar seam (compileScalar* + raw-local emitScalar*Loop over a
  linear-memory block) that todo 101 can reuse from the GC backend.

Tests: full ./mvnw test 2970/0 (integration v128 cases now pass simd=true plus
a scalar-equivalence case; NoGcWasmCompilerTest adds scalar no-0xFD cases and a
compileSimd() helper); native CiSpecE2eTest 732/0 (ci-spec does not run --no-gc,
confirming no cross-backend drift). Manual wasmtime 46: the scalar module has
zero 0xFD and runs with -W simd=n,relaxed-simd=n; the v128 module fails to
compile with SIMD disabled; identical stdout.

Docs: doc/{en,ja}/guides/simd-acceleration.md (orthogonality matrix + backend
bullets), doc/{en,ja}/compiling/wasm.md cross-reference, .kb/vec.md
("Acceleration layer 2" scalar/v128 split) and .kb/no-gc-scalar-wasm.md.

Co-Aut